2012-02-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/tweetentry.py: Removed redundant html decoding.

2012-02-18  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.0 release.

2012-02-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* updatewindow.py (UpdateWindow): Fixed update argument.
	* preferences.py (FeedSourceTreeview): Fixed button sensitiveness.

2012-02-16  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* et.po: Added new Estonian translation.  Thanks Rivo Zängov!
	* twitter/tweetentry.py (AddedHtmlMarkup): Added html escaping.

2012-02-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* menu.py, updatewindow.py: Added checking for old WebKit version.

2012-02-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* updatewindow.py: Added new setting for 'update-window-keep-above'.

2012-02-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* updatewindow.py: Add message info when replies.
	* menu.py, view.py: Added dom accessing for retrieving each entry
	  data from the WebView.  Added message info on a retweet dialog.

2012-02-11  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/tweetentry.py (TwitterTime): Show the date instead of
	  the time if the entry published one day before.
	* gfeedline.glade, window.py: Added a welcome message.
	* menu.py, twitter/account.py: Added support for creating favorites.

2012-02-10  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.0 beta 2 release.
	* gfeedline.js: Added auto control of scrolling in 'Twitter' mode.

2012-02-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.0 beta 1 release.
	* Added a confirmation dialog for retweets.

2012-02-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* html/theme/*: Added support for themes.

2012-02-06  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* notification.py: Added support for actions on notification.
	  Added support for Notify OSD on Ubuntu.
	* twitter/ouput.py: Added support for bad-words filtering.