@@ -1,4 +1,4 @@
-Overall, Gnome Feed Line is licensed the following terms:
+Overall, GFeedLine is licensed the following terms:
 
         Copyright (c) 2012 Yoshizumi Endo.
 
