@@ -1,9 +1,8 @@
-GNOME Feed Line - A Social Networking Client for the GNOME 3 Desktop.
+GFeedLine - A Social Networking Client.
 
 * About
 
-GNOME Feed Line is a social networking client for the GNOME 3 Desktop.  
-It supports Twitter.
+GFeedLine is a social networking client.  It supports Twitter.
 
 * Installation
 
