@@ -1,6 +1,6 @@
 #!/usr/bin/python
 #
-# gfeedline - Gnome Social Feed Reader
+# gfeedline - A Social Networking Client
 #
 # Copyright (c) 2012, Yoshizumi Endo.
 # Licence: GPL3
