@@ -1,7 +1,7 @@
 [Desktop Entry]
 Encoding=UTF-8
 Version=1.0
-_Name=GNOME Feed Line
+_Name=GFeedLine
 _Comment=Read & Write Social Feeds
 _GenericName=Social Networking Client
 Icon=gfeedline
