@@ -1,3 +1,8 @@
+2012-02-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* gfeedline: Renamed the product name from GNOME Feed Line to
+	  GFeedLine (issue #1).
+
 2012-02-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* twitter/tweetentry.py: Removed redundant html decoding.
